--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "cenebell",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<leaarevalo>.github.io/<cenebell>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@date-io/dayjs": "^1.3.13",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.13",
     "sass": "^1.85.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
